--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Document</title>
   </head>
   <body>
-    <h1 class="hola">Hola mundo</h1>
+    <h1 class="hola">
+      Hola!! Veni a planear tu viaje soñado, solo disfruta que nosotros
+      organizamos todo por vos. Solo tiene que escribirnos tu presupuesto y
+      seleccionar las opciones que mas te gusten.
+    </h1>
     <script src="./proyecto.js"></script>
   </body>
 </html>
