modificasiones para entrega

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <h1 class="hola">
       Hola!! Veni a planear tu viaje soñado, solo disfruta que nosotros
-      organizamos todo por vos. Solo tiene que escribirnos tu presupuesto y
-      seleccionar las opciones que mas te gusten.
+      organizamos todo por vos. Solo tienes que seleccionar las opciones que mas
+      te gusten.
     </h1>
     <script src="./proyecto.js"></script>
   </body>
